--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,31 +8,32 @@ body {
   background-color: $color-text-white;
   font-size: 1.5rem;
 
-  > header {
-    position:relative;
-  
-    height: 400px; /* Project Requirements */
-    width: 100%;
-    margin-top: 120px; /* Project Requirements */
-  
-    text-align: center;
-    color: #FFFFFF;
-  
-    background-color: $color-background-orange;
-    background-image: url("/images/green-dust-and-scratches.png");
+  > main {
 
-    > div {
-      margin-left:  auto;
-      margin-right: auto;
+    > header {
+      position:relative;
+    
+      height: 400px; /* Project Requirements */
+      width: 100%;
+      margin-top: 120px; /* Project Requirements */
+    
+      text-align: center;
+      color: #FFFFFF;
+    
+      background-color: $color-background-orange;
+      background-image: url("/images/green-dust-and-scratches.png");
+
+      > div {
+        margin-left:  auto;
+        margin-right: auto;
+      }
     }
   }
 }
 
-main {
+#container > section {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
 
-  color: $color-soft-brown;
-  background-color: $color-text-white;
 }
